Test code quality improvements